syntax = "proto3";

package UserService;

service UserService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}

message UpdateUserRequest {
  string username = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message UpdateUserResponse {
  string message = 1;
}

message DeleteUserRequest {
  string username = 1;
  string password = 2;
}

message DeleteUserResponse {
  string message = 1;
}